objects/UNITY_RenderWOLiInWorkPlanPDF__mdt.object
<CustomObject>
    <fields>
        <fullName>FreeText__c</fullName>
        <label>Free Text</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoodMediumBad__c</fullName>
        <label>Good/Medium/Bad</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Reading__c</fullName>
        <label>Meter Reading</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PassFail__c</fullName>
        <label>Pass/Fail</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YesNo__c</fullName>
        <label>Yes/No</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <label>UNITY_RenderWOLiInWorkPlanPDF</label>
    <pluralLabel>UNITY_RenderWOLiInWorkPlanPDFs</pluralLabel>
</CustomObject>